feat: enhanced api to work with different enumeration methods
